Fix misalignment in navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -337,6 +337,7 @@ select {
     height: 100%;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0;
 }
 
 .primary-navigation > li,
